feat: change ssh config in action file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh -o StrictHostKeyChecking=no creep@143.198.202.203 << 'EOF'
+          ssh user@your-server-ip << 'EOF'
             # Navigasi ke direktori project
             cd /home/creep/app/src
 
