--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh user@your-server-ip << 'EOF'
+          ssh creep@143.198.202.203 << 'EOF'
             # Navigasi ke direktori project
             cd /home/creep/app/src
 
